<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/coin_photo_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/coin_value_list_item"
        style="@style/ListTextViewStyle"
        android:text="Номинал" />

    <TextView
        android:id="@+id/coin_year_list_item"
        style="@style/ListTextViewStyle"
        android:text="@string/coin_year_in_list" />

    <ImageView
        android:id="@+id/country_image"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/country_flag"
        />

    <TextView
        android:id="@+id/coin_quantity_list_item"
        style="@style/ListTextViewStyle"
        android:text="@string/quantity" />
</LinearLayout>