<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aves"
                android:layout_width="25dp"
                android:layout_height="35dp" />

            <ImageView
                android:id="@+id/reverse"
                android:layout_width="25dp"
                android:layout_height="35dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/coin_year"
                    style="@style/TextViewStyle"
                    android:text="@string/year"
                    android:layout_gravity="end"
                    />

                <TextView
                    android:id="@+id/coin_value"
                    style="@style/TextViewStyle"
                    android:text="@string/value"
                    android:layout_gravity="end"
                    />

                <TextView
                    android:id="@+id/coin_country"
                    style="@style/TextViewStyle"
                    android:text="@string/country"
                    android:layout_gravity="end"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/coin_year_text"
                    style="@style/TextViewStyle"
                    android:inputType="number"
                    android:hint="@string/year"
                    />

                <EditText
                    android:id="@+id/coin_value_text"
                    style="@style/TextViewStyle"
                    android:inputType="number"
                    android:hint="@string/value"
                    />

                <EditText
                    android:id="@+id/coin_country_text"
                    style="@style/TextViewStyle"
                    android:inputType="text"
                    android:hint="@string/country"
                    />

            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            android:layout_gravity="right"
            android:layout_margin="20dp">


        </ImageButton>

        <Button
            android:id="@+id/coin_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:layout_gravity="center"/>

        <FrameLayout
            android:id="@+id/more_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </LinearLayout>

</LinearLayout>